service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: product-store
  name: product-store
  namespace: product-store
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: product-store
  type: ClusterIP
